@@ -2,6 +2,9 @@ Wed Nov 14 11:27:10 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/xmldata/MeshExporter.java: Copy Amibe2VTK class
 	into MeshExporter.
+	* src/org/jcae/mesh/amibe/validation/QualityFloat.java: Compute
+	min and max values in finish().  New getValueByPercent(),
+	getMeanValue() and getStandardDeviation() methods.
 
 Tue Nov 13 13:42:27 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
 
